--- a/CSS-Snippets/Tags/tags.css
+++ b/CSS-Snippets/Tags/tags.css
@@ -1,6 +1,6 @@
 /*
  *  Tag View Snippet for Joplin by Marvin Parlevliet
- *  Read README.md for instructions on how to modify Tag View to your needs (Great for those new to CSS!)
+ *  Read the comments below for instructions on how to modify Tag View to your needs (Great for those new to CSS!)
  */
 
  tagview {
